update alert component - add alert-box element to relative box - when alert-box is positioned top, push the alert-box down as browser alerts (as password save notifier) pushes the view down - this will prevent alert-box to stand behind browser notifications.

--- a/src/app/components/common/alert/alert/alert.component.scss
+++ b/src/app/components/common/alert/alert/alert.component.scss
@@ -1,3 +1,13 @@
+.relative-box-top{
+  position: relative;
+}
+
+.relative-box-bottom{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
 .alert-box{
   position: absolute;
   display: flex;
